@@ -22,6 +22,7 @@ Change Log:
 - Fix an issue where M2 returns an error to PayPal when a non-M2 payment is made in the PayPal account
 - Fix protection bug that would hide custom posts in certain situations, e.g. when using wp_list_pages()
 - Fix a bug in Pro-Rating Add-on to correctly apply discount from now on
+- Fix Taxamo Add-on to use currency of the invoice
 - Fix wrong signup-logic to instantly disable the old subscription on membership upgrade/downgrade
 - Fix a PHP error that occured when paying the first invoice of a member via manual gateway
 - Fix a possible recursive redirection when showing the Autorize.Net payment form
